cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(PICO_BOARD pico CACHE STRING "Board type")

include(pico_sdk_import.cmake)
project(Projeto_Integrado C CXX ASM)
pico_sdk_init()
add_executable(Projeto_Integrado Projeto_Integrado.c lib/ssd1306.c)
pico_set_program_name(Projeto_Integrado "Projeto_Integrado")
pico_set_program_version(Projeto_Integrado "0.1")
pico_enable_stdio_uart(Projeto_Integrado 0)
pico_enable_stdio_usb(Projeto_Integrado 1)
pico_generate_pio_header(Projeto_Integrado ${CMAKE_CURRENT_LIST_DIR}/ws2812b.pio)
target_link_libraries(Projeto_Integrado pico_stdlib hardware_i2c hardware_adc hardware_pwm hardware_clocks hardware_irq hardware_gpio hardware_timer hardware_pio)
target_include_directories(Projeto_Integrado PRIVATE ${CMAKE_CURRENT_LIST_DIR})
pico_add_extra_outputs(Projeto_Integrado)
